...
                        .padding()
                        .padding(.horizontal)
                }
                .foregroundColor(.white)
                .background(Color.theme.primary)
                .clipShape(Capsule())
                .accessibilityIdentifier("SignInButton")
                
                Spacer()
                
            }
            
        }
...
