...
    }
    
    var body: some View {
        VStack {
            NavigationLink(tag: "Details", selection: $vm.tag) {
                if let savedLocation = vm.savedLocation {
                    LocatingDetailsView(parkingLocation: savedLocation, locatingStatusService: vm.locatingStatusService)
                }
            } label: {
                EmptyView()
            }
            
            if vm.savedLocation != nil {
...
                
                Spacer()
            }
            .padding()
            .frame(maxWidth:.infinity, alignment: .leading)
        }
        .accessibilityIdentifier("BackToVehicle")
        .contentShape(Rectangle())
        .onTapGesture {
            vm.locate()
        }
        .padding(.horizontal)
        .foregroundStyle(.background)
...
